--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;    
-    background: linear-gradient(#ff4133, #C92A7A);
+    background: linear-gradient(#0074cc, #003366);
 }
 
 .card {
@@ -18,6 +18,7 @@
     margin: 1rem;
     margin-top: 30px;
     padding-top: 60px;
+    overflow: hidden; /* Добавлено для обрезки изображения внутри формы */
 }
 
 .image {
@@ -28,12 +29,14 @@
     width: 140px;
     height: 140px;
     border-radius: 50%;
+    overflow: hidden; /* Добавлено для обрезки изображения */
 }
 
 .image img {
     display: block;
     width: 100%;
     height: 100%;
+    object-fit: cover; /* Добавлено для подстройки размеров изображения */
 }
 
 button {
