--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -8,26 +8,31 @@
     background: linear-gradient(#0074cc, #003366);
 }
 
-.card {
+.form-container {
+    display: flex;
+    justify-content: center;
+}
+
+.form {
     position: relative;
-    padding: 1.5rem;
     width: 380px;
     background: white;
     border-radius: 1rem;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     margin: 1rem;
-    margin-top: 30px;
     padding-top: 60px;
     overflow: hidden; /* Добавлено для обрезки изображения внутри формы */
 }
 
-.image {
-    position: absolute;
-    top: -70px;
-    left: 50%;
-    transform: translateX(-50%);
+.image-container {
     width: 140px;
     height: 140px;
+    margin-top: -70px;
+}
+
+.image {
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
     overflow: hidden; /* Добавлено для обрезки изображения */
 }
