--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -4,44 +4,55 @@
     height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: center;    
+    align-items: center;
     background: linear-gradient(#0074cc, #003366);
 }
 
-.form-container {
+.container {
     display: flex;
-    justify-content: center;
-}
-
-.form {
-    position: relative;
-    width: 380px;
-    background: white;
-    border-radius: 1rem;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    margin: 1rem;
-    padding-top: 60px;
-    overflow: hidden; /* Добавлено для обрезки изображения внутри формы */
+    flex-direction: column;
+    align-items: center;
 }
 
 .image-container {
     width: 140px;
     height: 140px;
     margin-top: -70px;
+    background: white;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .image {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    overflow: hidden; /* Добавлено для обрезки изображения */
+    overflow: hidden;
 }
 
 .image img {
     display: block;
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Добавлено для подстройки размеров изображения */
+    object-fit: cover;
+}
+
+.form-container {
+    position: relative;
+    margin-top: -70px; /* Сдвигаем форму вверх, чтобы она перекрывала часть изображения */
+    z-index: 1; /* Задаем z-index, чтобы форма была выше изображения */
+}
+
+.form {
+    width: 380px;
+    background: white;
+    border-radius: 1rem;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    margin: 1rem;
+    padding-top: 60px;
+    overflow: hidden;
 }
 
 button {
