--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -90,8 +90,8 @@ h1 {
     text-align: center;
 }
 
-.text-center {
-    text-align: center;
+.text-center button {
+    margin: 1rem 0 1rem 0.5rem; /* Верх, право, низ, лево */
 }
 
 .red-text {
