--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -91,7 +91,7 @@ h1 {
 }
 
 .text-center button {
-    margin: 1rem 0 1rem 0.5rem; /* Верх, право, низ, лево */
+    margin: 1rem 1rem 1rem 1rem; /* Верх, право, низ, лево */
 }
 
 .red-text {
