--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -91,7 +91,9 @@ h1 {
 }
 
 .text-center button {
-    margin: 1rem 1rem 1rem 1rem; /* Верх, право, низ, лево */
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding: 1rem 2rem;
 }
 
 .red-text {
